--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 
 	<title>Sprint Challenge - Anasayfa</title>
+	<link rel="stylesheet" href="/css/index.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
@@ -16,13 +17,21 @@
 		<!-- header -->
 		<header>
 			<div>
-				ERGİNEER BAR VE MANGAL
+				<h1><a href="index.html">ERGİNEER BAR VE MANGAL</h1>
+				<nav class="nav-up">
+					<a href="menu.html">Menü</a>
+					<a href="">Rezervasyonlar</a>
+					<a href="">Özel Teklifler</a>
+					<a href="">İletişim</a>
+				</nav>
+				<div class="social-media">
+					<i class="fa-brands fa-square-facebook fa-5x"></i>
+					<i class="fa-brands fa-twitter fa-5x"></i>
+					<i class="fa-brands fa-instagram fa-5x"></i>
+				</div>
 
-				<!-- nav -->
-				Menü
-				Rezervasyonlar
-				Özel Teklifler
-				İletişim
+
+
 			</div>
 		</header>
 
@@ -30,24 +39,17 @@
 		<section class="gallery">
 			<div>
 				<h2>YEMEKLERİMİZ</h2>
+				<img src="img/food-avocadotoast.jpg" alt="">
+				<img src="img/food-burger.jpg" alt="">
+				<img src="img/food-poutine.jpg" alt="">
+				<img src="img/food-ribs.jpg" alt="">
+				<img src="img/food-sandwich.jpg" alt="">
+				<img src="img/food-sausage.jpg" alt="">
+				<img src="img/food-steak.jpg" alt="">
+				<img src="img/food-tacos.jpg" alt="">
+				<img src="img/food-wings.jpg" alt="">
 
-				img/food-avocadotoast.jpg
 
-				img/food-burger.jpg
-
-				img/food-poutine.jpg
-
-				img/food-ribs.jpg
-
-				img/food-sandwich.jpg
-
-				img/food-sausage.jpg
-
-				img/food-steak.jpg
-
-				img/food-tacos.jpg
-
-				img/food-wings.jpg
 			</div>
 		</section>
 
@@ -125,15 +127,27 @@
 		<!-- footer -->
 		<footer>
 			<!-- email signup -->
-			Mail listemize katılın!
-			Üye Ol
-			<!-- nav -->
-			Menü
-			Rezervasyonlar
-			Özel Teklifler
-			İletişim
+			<div>
+				<h3>Mail listemize katılın!</h3>
+				<form>
+					<label for="email">E-posta Adresi:</label>
+					<input type="email" id="email" name="email">
+					<br><br>
+					<button type="submit">Üye Ol</button>
+				</form>
+			</div>
+			<div class="footer-nav">
+				<nav class="nav-down">
+					<a href="menu.html">Menü</a>
+					<a href="">Rezervasyonlar</a>
+					<a href="">Özel Teklifler</a>
+					<a href="">İletişim</a>
+				</nav>
+				<p>©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.</p>
+			</div>
+
 			<!-- copyright -->
-			©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.
+
 		</footer>
 	</div>
 </body>
