--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<a href="">İletişim</a>
 				</nav>
 				<div class="social-media">
-					<i class="fa-brands fa-square-facebook fa-5x"></i>
-					<i class="fa-brands fa-twitter fa-5x"></i>
-					<i class="fa-brands fa-instagram fa-5x"></i>
+					<i class="fa-brands fa-square-facebook"></i>
+					<i class="fa-brands fa-twitter"></i>
+					<i class="fa-brands fa-instagram"></i>
 				</div>
 
 
