--- a/menu.html
+++ b/menu.html
@@ -48,6 +48,9 @@
                         </div>
                         <p>₺2</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
+                    
+                    
                     <div class="content1">
                         <div>
                             <p>Kahve</p>
@@ -55,6 +58,7 @@
                         </div>
                         <p>₺2</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Bira</p>
@@ -62,6 +66,7 @@
                         </div>
                         <p>₺5</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Şarap</p>
@@ -69,6 +74,7 @@
                         </div>
                         <p>₺5</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Kokteyl</p>
@@ -87,6 +93,7 @@
                         </div>
                         <p>₺6</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Buffalo Soslu Kanat</p>
@@ -98,6 +105,7 @@
                         </div>
                         <p>₺10</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Patates Kızartması</p>
@@ -117,6 +125,7 @@
                         </div>
                         <p>₺8</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Fransız Soğan Çorbası</p>
@@ -125,6 +134,7 @@
                         </div>
                         <p>₺4</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Çedarlı Brokoli Çorbası</p>
@@ -145,6 +155,7 @@
                         </div>
                         <p>₺32</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Büyük Hamburger</p>
@@ -153,6 +164,7 @@
                         </div>
                         <p>₺14</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
 
                     <div class="content1">
                         <div>
@@ -173,6 +185,7 @@
                         </div>
                         <p>₺7</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Kurabiye ve Dondurma</p>
@@ -180,6 +193,7 @@
                         </div>
                         <p>₺6</p>
                     </div>
+                    <div class="lineUp"><div class="line"></div></div>
                     <div class="content1">
                         <div>
                             <p>Profiteröllü Pasta</p>
