--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
         <!-- header -->
         <header>
             <div>
-                <h1><a href="index.html">ERGİNEER BAR VE MANGAL</h1>
+                <h1><a href="index.html">ERGİNEER BAR VE MANGAL </a></h1>
                 <nav class="nav-up">
                     <a href="menu.html">Menü</a>
                     <a href="">Rezervasyonlar</a>
